--- a/HTML/assets/css/styles.css
+++ b/HTML/assets/css/styles.css
@@ -1,4 +1,30 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
+.grid {
+    padding: 15px;
+}
 
+.grid::after {
+    content: '';
+    display: block;
+    clear: both;
+}
 
+.grid .col {
+    width: 33.33%;
+    height: 300px;
+    float: left;
+    padding: 15px;
+}
 
+.grid .col-content {
+    width: 100%;
+    height: 100%;
+    background: darkred;
+    color: #fff;
+    /* ABCDEF123456789(hexadecimal) rgb(RED , GREEN , BLUE) max: 255, min: 0 rgba( RED, GREEN, BLUE , ALPHA) */
+}
