--- a/HTML/assets/css/styles.css
+++ b/HTML/assets/css/styles.css
@@ -4,106 +4,39 @@
     box-sizing: border-box;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 body {
-    font-family: sans-serif;
+    font-size: 24px;
 }
 
-.grid {
-    padding: 15px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-top: 73px;
+p {
+  margin: 0 0 24px;
 }
 
-.grid::after {
-    content: '';
-    display: block;
-    clear: both;
+.two-columns {
+    display: flex;
 }
 
-
-.grid .col {
-    height: 300px;
-    float: left;
-    padding: 15px;
+.two-columns .col {
+    display: flex;
+    flex-direction: column;
+    background: lawngreen;
+    margin: 15px;
+    padding: 30px;
 }
 
-.grid .col-content {
+.gallery {
+    flex-flow: row wrap;
+    display: flex;
+}
+
+.gallery .img {
+    flex: 1 0 20%;
     width: 100%;
-    height: 100%;
-    background: red;
-}
-
-.menu {
-    width: 100%;
-    position: fixed;
-    background: rgba(0, 0, 0, 0.842);
-}
-
-.menu ul {
-    list-style: none;
-    display: block;
-    max-width: 1200px;
-    padding: 0 30px;
-    margin: 0 auto;
-}
-
-.menu ul li{
-    float: left;
-}
-
-.menu ul li a {
-   display: block;
-   color: #fff;
-   padding: 20px;
-   text-decoration: none;
-   transition: all 300ms ease-in-out;
-}
-
-.menu ul li a:hover {
-   background: #333;
-}
-
-.full-page {
-    padding: 0 30px;
-    max-width: 100%;
-    padding-top: 73px;
-    height: 100vh;
-    background: turquoise;
-    
-}
-
-.full-page-content {
-    max-width: 1200px;
-    padding: 0 30px;
+    height: 50px; 
+    background: blue;
+    margin: 10px;
 }
 
 
 
-@media all and (max-width:568px) {
-    .grid .col {
-        width: 100%;
-    }
-}
 
-@media all and (min-width: 569px) and (max-width:768px) {
-    .grid .col {
-        width: 50%;
-    }
-}
-
-@media all and (min-width: 769px) and (max-width:1200px) {
-    .grid .col {
-        width: 33.3%;
-    }
-}
-
-@media all and (min-width: 1200px) {
-    .grid .col {
-        width: 25%;
-    }
-}
