--- a/HTML/assets/css/styles.css
+++ b/HTML/assets/css/styles.css
@@ -5,38 +5,57 @@
 }
 
 body {
-    font-size: 24px;
+    font: sans-serif;
+    font-size: 40px;
 }
 
-p {
-  margin: 0 0 24px;
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.two-columns {
+.grid {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 200px 1fr;
+    grid-template-areas:
+        'header header'
+        'nav main'
+        'rodape rodape';
+}
+
+.grid div:nth-child(1) {
+    background: red;
+    grid-area: header;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.two-columns .col {
-    display: flex;
-    flex-direction: column;
-    background: lawngreen;
-    margin: 15px;
-    padding: 30px;
+.grid div:nth-child(2) {
+    background: yellow;
+    grid-area: nav;
 }
 
-.gallery {
-    flex-flow: row wrap;
-    display: flex;
+.grid div:nth-child(3) {
+    background: violet;
+    grid-area: main;
 }
 
-.gallery .img {
-    flex: 1 0 20%;
-    width: 100%;
-    height: 50px; 
-    background: blue;
-    margin: 10px;
+.grid div:nth-child(4) {
+    background: turquoise;
+    grid-area: rodape;
 }
 
-
-
-
+@media (max-width: 768px) {
+    .grid {
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: auto;
+        grid-template-areas:
+            'header'
+            'main'
+            'nav'
+            'rodape';
+    }
+}
